--- a/maps/templates/heatmap.html
+++ b/maps/templates/heatmap.html
@@ -1,63 +1,19 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+{% extends "layout.html" %}
+{% block title %}爱抢购分布_热力图{% endblock %}
+{% block head %}
+    {{ super() }}
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <title>热力图</title>
-    <style type="text/css">     
-        body{
-            margin:0;
-            height:100%;
-            width:100%;
-            position:absolute;
-        }
-        #mapContainer{
-            position: absolute;
-            top:0;
-            left: 0;
-            right:0;
-            bottom:0;
-        }
-        #tip{
-            height:45px;
-            background-color:#fff;
-            padding-left:10px;
-            padding-right:10px;
-            border:1px solid #969696;
-            position:absolute;
-            font-size:12px;
-            right:10px;
-            bottom:30px;
-            border-radius:3px;
-            line-height:45px;
-        }
-        
-        #tip input[type='button']{
-            height:28px;
-            line-height:28px;
-            outline:none;
-            text-align:center;
-            padding-left:5px;
-            padding-right:5px;
-            color:#FFF;
-            background-color:#0D9BF2;
-            border:0;
-            border-radius: 3px;
-            margin-top:8px;
-            margin-left:5px;
-            cursor:pointer;
-            margin-right:10px;
-        }
-    </style>    
-</head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='amap.css') }}">
+    <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&    key=d7fbdb3c67451f5dcd7ca223a9e2f1f4"></script>
+{% endblock %}
 
-<body>
+{% block content %}
     <div id="mapContainer"></div>
-    <div id="tip">
+    <div id="tip">    
         <input type="button"  onclick="openHeatmap();" value="显示热力图"/>
         <input type="button"  onclick="closeHeatmap();" value="关闭热力图"/>
     </div>
-    <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=d7fbdb3c67451f5dcd7ca223a9e2f1f4"></script>
+
     <script type="text/javascript">
         //实例化地图
         var map = new AMap.Map("mapContainer",{ 
@@ -66,7 +22,8 @@
                 center:new AMap.LngLat(116.418261, 39.921984),
                 zoom: 11 
             })});
-        //显示的热力图数据，该数据为北京部分“公园”数据 
+
+        //显示的热力图数据 
         {% autoescape false %} 
         var points = {{ points }}
         {% endautoescape %}
@@ -74,6 +31,7 @@
         if(!isSupportCanvas()){
             alert('热力图仅对支持canvas的浏览器适用,您所使用的浏览器不能使用热力图功能,请换个浏览器试试~')
         }
+
         //详细的参数,可以查看heatmap.js的文档 http://www.patrick-wied.at/static/heatmapjs/docs.html
         //参数说明如下:
         /* visible 热力图是否显示,默认为true
@@ -89,6 +47,17 @@
                 value 为颜色值 
          */
         var heatmap;
+
+        map.plugin(["AMap.ToolBar"],function(){
+          //加载工具条
+          tool = new AMap.ToolBar({
+            direction:true,//方向导航
+            ruler:true,//视野级别控制尺
+            autoPosition:false//禁止自动定位
+          });
+          map.addControl(tool);
+        });
+
         map.plugin(["AMap.Heatmap"],function() {
             //初始化heatmap对象
             heatmap = new AMap.Heatmap(map, {
@@ -121,6 +90,5 @@
             var elem = document.createElement('canvas');
             return !!(elem.getContext && elem.getContext('2d'));
         }
-    </script>   
-</body>
-</html>
+    </script> 
+{% endblock %}
