--- a/stats/templates/layout.html
+++ b/stats/templates/layout.html
@@ -1,27 +1,52 @@
 <!doctype html>
-<html>
+<html lang="zh-CN">
   <head>
     {% block head %}
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <!-- 新 Bootstrap 核心 CSS 文件 -->
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!-- 可选的Bootstrap主题文件（一般不用引入） -->
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
+    <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+    <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <title>{% block title %}{% endblock %} - By Larry</title>
     {% endblock %}
   </head>
   <body>
-    {% with messages = get_flashed_messages() %}
-      {% if messages %}
-        <ul class=flashes>
-        {% for message in messages %}
-          <li>{{ message }}</li>
-        {% endfor %}
-        </ul>
-      {% endif %}
-    {% endwith %}
-    <div id="content">{% block content %}{% endblock %}</div>
-    <div id="footer">
-      {% block footer %}
-      &copy; Copyright 2015 by  <a href="http://www.iqianggou.com/">larry.iqianggou</a>.
-      {% endblock %}
+    <div class="container-fluid" id="flash-message">
+      <div class="row">
+        <div class="col-md-12">
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+              <ul class=flashes>
+              {% for message in messages %}
+                <li>{{ message }}</li>
+              {% endfor %}
+              </ul>
+            {% endif %}
+          {% endwith %}
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid" id="content">
+      <div class="row">
+        <div class="col-md-12">
+          {% block content %}{% endblock %}
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid" id="footer">
+      <div class="row">
+        <div class="col-md-12">
+          {% block footer %}
+          &copy; Copyright 2015 by  <a href="http://www.iqianggou.com/">larry.iqianggou</a>.
+          {% endblock %}
+        </div>
+      </div>
     </div>
   </body>
 </html>
