--- a/stats/templates/trackmarketing.html
+++ b/stats/templates/trackmarketing.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 {% block title %} {{data["title"]}} {% endblock %}
 {% block content %} 
+
     <form action="{{ url_for('track_marketing_via_mobile') }}" method=post>
         <dl>
             <dd>在下面的文本框中输入手机号，用逗号/空格/回车分割</dd>
@@ -8,11 +9,21 @@
             <dd><input type=submit value="查询"></dd>
         </dl>
     </form>
+
+
     {% if data and data['success'] and data['sections'] %}
-    <ul>
-        {% for section in data['sections'] %}
-            <li>{{ section["name"] }}:  {{ section["value"] }}</li>
-        {% endfor %}
-    </ul>
+    <div class="col-md-8">
+        <table  class="table table-hover">
+            <tr><th>#</th><th>项目</th><th>结果</th><th>操作</th></tr>
+            {% for section in data['sections'] %}
+            <tr>
+                <td>{{ loop.index }}</td>
+                <td>{{ section["name"] }}</td>
+                <td>{{ section["value"] }}</td>
+                <td><a href=#>下载明细</a></td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
     {% endif %}
 {% endblock %}
