--- a/stats/templates/layout.html
+++ b/stats/templates/layout.html
@@ -16,21 +16,28 @@
     {% endblock %}
   </head>
   <body>
+    <div class="clearfix" style="margin-bottom: 10px;"></div>
+
     <div class="container-fluid" id="flash-message">
       <div class="row">
         <div class="col-md-12">
             {% with messages = get_flashed_messages() %}
             {% if messages %}
-              <ul class=flashes>
               {% for message in messages %}
-                <li>{{ message }}</li>
+                <div class="alert alert-warning alert-dismissible" role="alert">
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                <span class="sr-only">Error:</span>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                {{ message }}
+              </div>
               {% endfor %}
-              </ul>
             {% endif %}
           {% endwith %}
         </div>
       </div>
     </div>
+
+    <div class="clearfix" style="margin-bottom: 10px;"></div>
 
     <div class="container-fluid" id="content">
       <div class="row">
@@ -39,9 +46,12 @@
         </div>
       </div>
     </div>
+
+    <div class="clearfix" style="margin-bottom: 10px;"></div>
+
     <div class="container-fluid" id="footer">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12" padding＝"50px">
           {% block footer %}
           &copy; Copyright 2015 by  <a href="http://www.iqianggou.com/">larry.iqianggou</a>.
           {% endblock %}
