--- a/stats/templates/trackmarketing.html
+++ b/stats/templates/trackmarketing.html
@@ -2,14 +2,37 @@
 {% block title %} {{data["title"]}} {% endblock %}
 {% block content %} 
 
-    <form action="{{ url_for('track_marketing_via_mobile') }}" method=post>
-        <dl>
-            <dd>在下面的文本框中输入手机号，用逗号/空格/回车分割</dd>
-            <dd><textarea name=promotedmobiles rows=10 cols=30>{% if data and data['mobiles'] %}{{ data['mobiles'] }}{% endif %}</textarea></dd>
-            <dd><input type=submit value="查询"></dd>
-        </dl>
-    </form>
+    <div class="col-md-8">
+      <ul class="nav nav-tabs nav-justified" role="tablist">
+        <li role="presentation" class="active"><a href="#home" aria-controls="byMobiles" role="tab" data-toggle="tab">用手机号查询</a></li>
+        <li role="presentation"><a href="#profile" aria-controls="byCards" role="tab" data-toggle="tab">用微信号查询</a></li>
+        <li role="presentation"><a href="#messages" aria-controls="byWechat" role="tab" data-toggle="tab">用兑换码查询</a></li>
+      </ul>
 
+      <div class="clearfix" style="margin-bottom: 30px;"></div>
+
+     <!-- Tab panes -->
+      <div class="tab-content">
+        <div role="tabpanel" class="tab-pane active" id="home">
+            <form action="{{ url_for('track_marketing_via_mobile') }}" method=post>
+                <div class="form-group">
+                    <textarea id="inputMobiles" name="inputMobiles" rows=10 class="form-control" placeholder="在此输入手机号">{% if data and data['mobiles'] %}{{ data['mobiles'] }}{% endif %}</textarea>
+                    <span id="helpBlock" class="help-block">在上面的文本框中输入需要查询的手机号，手机号之间可以用空格，逗号，或回车分格，请留意一次不要输入过多的（小于10000个）手机号</span>
+                  </div>
+                  <button type="submit" class="btn btn-success btn-block">查询</button>
+                </dl>
+            </form>
+        </div>
+        <div role="tabpanel" class="tab-pane" id="profile">
+            本功能暂未开通
+        </div>
+        <div role="tabpanel" class="tab-pane" id="messages">
+            本功能暂未开通
+        </div>
+      </div>
+    </div>
+
+    <div class="clearfix" style="margin-bottom: 10px;"></div>
 
     {% if data and data['success'] and data['sections'] %}
     <div class="col-md-8">
