--- a/stats/templates/trackmarketing.html
+++ b/stats/templates/trackmarketing.html
@@ -24,11 +24,11 @@
 
         <div class="clearfix" style="margin-bottom: 10px;"></div>
 
-        {% if data and data['success'] and data['sections'] and data['tab'] and data['tab'] == 'mobiles' %}
+        {% if data and data['success'] and data['res_data'] and data['tab'] and data['tab'] == 'mobiles' %}
         <div>
             <table  class="table table-hover">
                 <tr><th>#</th><th>项目</th><th>结果</th><th>操作</th></tr>
-                {% for section in data['sections'] %}
+                {% for section in data['res_data'] %}
                 <tr>
                     <td>{{ loop.index0 }}</td>
                     <td>{{ section["name"]|safe }}</td>
@@ -63,11 +63,11 @@
 
         <div class="clearfix" style="margin-bottom: 10px;"></div>
 
-        {% if data and data['success'] and data['sections'] and data['tab'] and data['tab'] == 'cards' %}
+        {% if data and data['success'] and data['res_data'] and data['tab'] and data['tab'] == 'cards' %}
         <div>
             <table class="table table-hover">
                 <tr><th>#</th><th>项目</th><th>结果</th><th>操作</th></tr>
-                {% for section in data['sections'] %}
+                {% for section in data['res_data'] %}
                 <tr>
                     <td>{{ loop.index }}</td>
                     <td>{{ section["name"]|safe }}</td>
@@ -102,11 +102,11 @@
 
         <div class="clearfix" style="margin-bottom: 10px;"></div>
 
-        {% if data and data['success'] and data['sections'] and data['tab'] and data['tab'] == 'wechat' %}
+        {% if data and data['success'] and data['res_data'] and data['tab'] and data['tab'] == 'wechat' %}
         <div>
             <table  class="table table-hover">
                 <tr><th>#</th><th>项目</th><th>结果</th><th>操作</th></tr>
-                {% for section in data['sections'] %}
+                {% for section in data['res_data'] %}
                 <tr>
                     <td>{{ loop.index0 }}</td>
                     <td>{{ section["name"]|safe }}</td>
