build tracker class dynamically

--- a/stats/templates/trackmarketing.html
+++ b/stats/templates/trackmarketing.html
@@ -3,19 +3,19 @@
 {% block content %} 
     <div class="col-md-8">
       <ul class="nav nav-tabs nav-justified" role="tablist" id="myTabs">
-        <li role="presentation"><a href="#mobiles" aria-controls="mobiles" role="tab" data-toggle="tab">用手机号查询</a></li>
-        <li role="presentation"><a href="#cards" aria-controls="cards" role="tab" data-toggle="tab">用兑换码查询</a></li>
-        <li role="presentation"><a href="#wechat" aria-controls="wechat" role="tab" data-toggle="tab">用微信号查询</a></li>
+        <li role="presentation"><a href="#Mobile" aria-controls="Mobile" role="tab" data-toggle="tab">用手机号查询</a></li>
+        <li role="presentation"><a href="#Campaign" aria-controls="Campaign" role="tab" data-toggle="tab">用兑换码查询</a></li>
+        <li role="presentation"><a href="#Wechat" aria-controls="wechat" role="tab" data-toggle="tab">用微信号查询</a></li>
       </ul>
 
       <div class="clearfix" style="margin-bottom: 30px;"></div>
 
      <!-- Tab panes -->
       <div class="tab-content">
-        <div role="tabpanel" class="tab-pane" id="mobiles">
-            <form action="{{ url_for('track_marketing') }}?type=mobiles" method=post>
+        <div role="tabpanel" class="tab-pane" id="Mobile">
+            <form action="{{ url_for('track_marketing') }}?type=Mobile" method=post>
                 <div class="form-group">
-                    <textarea id="input_mobiles" name="input_mobiles" rows=10 class="form-control" placeholder="在此输入手机号">{% if data and data['source'] and data['tab'] and data['tab'] == 'mobiles' %}{{ data['source'] }}{% endif %}</textarea>
+                    <textarea id="input_Mobile" name="input_Mobile" rows=10 class="form-control" placeholder="在此输入手机号">{% if data and data['source'] and data['tab'] and data['tab'] == 'Mobile' %}{{ data['source'] }}{% endif %}</textarea>
                     <span id="helpBlock" class="help-block">在上面的文本框中输入需要查询的手机号，手机号之间可以用空格，逗号，或回车分格，请留意一次不要输入过多的（小于10000个）手机号</span>
                   </div>
                   <button type="submit" class="btn btn-success btn-block">查询</button>
@@ -24,7 +24,7 @@
 
         <div class="clearfix" style="margin-bottom: 10px;"></div>
 
-        {% if data and data['success'] and data['res_data'] and data['tab'] and data['tab'] == 'mobiles' %}
+        {% if data and data['success'] and data['res_data'] and data['tab'] and data['tab'] == 'Mobile' %}
         <div>
             <table  class="table table-hover">
                 <tr><th>#</th><th>项目</th><th>结果</th><th>操作</th></tr>
@@ -51,10 +51,10 @@
         {% endif %}
         </div>
 
-        <div role="tabpanel" class="tab-pane" id="cards">
-             <form action="{{ url_for('track_marketing') }}?type=cards" method=post>
+        <div role="tabpanel" class="tab-pane" id="Campaign">
+             <form action="{{ url_for('track_marketing') }}?type=Campaign" method=post>
                 <div class="form-group">
-                    <input id="input_cards" name="input_cards" type="text" class="form-control" placeholder="batch id" value="{% if data and data['source'] and data['tab'] and data['tab'] == 'cards' %}{{ data['source'] }}{% endif %}">
+                    <input id="input_Campaign" name="input_Campaign" type="text" class="form-control" placeholder="batch id" value="{% if data and data['source'] and data['tab'] and data['tab'] == 'Campaign' %}{{ data['source'] }}{% endif %}">
                     <span class="help-block">在上面的文本框中输入充值卡的批次号（batch id）</span>
                   </div>
                   <button type="submit" class="btn btn-success btn-block">查询</button>
@@ -63,7 +63,7 @@
 
         <div class="clearfix" style="margin-bottom: 10px;"></div>
 
-        {% if data and data['success'] and data['res_data'] and data['tab'] and data['tab'] == 'cards' %}
+        {% if data and data['success'] and data['res_data'] and data['tab'] and data['tab'] == 'Campaign' %}
         <div>
             <table class="table table-hover">
                 <tr><th>#</th><th>项目</th><th>结果</th><th>操作</th></tr>
@@ -90,10 +90,10 @@
         {% endif %}
         </div>
 
-        <div role="tabpanel" class="tab-pane" id="wechat">
-            <form action="{{ url_for('track_marketing') }}?type=wechat" method=post>
+        <div role="tabpanel" class="tab-pane" id="Wechat">
+            <form action="{{ url_for('track_marketing') }}?type=Wechat" method=post>
                 <div class="form-group">
-                    <textarea id="input_wechat" name="input_wechat" rows=10 class="form-control" placeholder="在此输入微信号">{% if data and data['source'] and data['tab'] and data['tab'] == 'wechat' %}{{ data['source'] }}{% endif %}</textarea>
+                    <textarea id="input_Wechat" name="input_Wechat" rows=10 class="form-control" placeholder="在此输入微信号">{% if data and data['source'] and data['tab'] and data['tab'] == 'Wechat' %}{{ data['source'] }}{% endif %}</textarea>
                     <span id="helpBlock" class="help-block">在上面的文本框中输入需要查询的微信号，注意微信号之间只能用回车分格，请留意一次不要输入过多的（小于10000个）微信号</span>
                   </div>
                   <button type="submit" class="btn btn-success btn-block">查询</button>
@@ -102,7 +102,7 @@
 
         <div class="clearfix" style="margin-bottom: 10px;"></div>
 
-        {% if data and data['success'] and data['res_data'] and data['tab'] and data['tab'] == 'wechat' %}
+        {% if data and data['success'] and data['res_data'] and data['tab'] and data['tab'] == 'Wechat' %}
         <div>
             <table  class="table table-hover">
                 <tr><th>#</th><th>项目</th><th>结果</th><th>操作</th></tr>
@@ -155,7 +155,7 @@
               }, "json");
       });
 
-    var tabhref = "#mobiles"
+    var tabhref = "#Mobile"
     {% if data and data['tab'] %}
         tabhref = "#{{ data['tab'] }}"
     {% endif %}
